package Herencia.Practica1;

public abstract class MetodoPago { //la mamá

    abstract void procesarPago(double importe);

}
